kubernetes/hexon-discovery/hexon-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexon-discovery-service
spec:
  selector:
    app: hexon-discovery-service
  ports:
  - port: 9010
    targetPort: 9010
    name: service
    protocol: TCP
  - port: 9011
    targetPort: 9011
    name: management
    protocol: TCP
  type: NodePort
